--- a/ArtNYC/Base.lproj/Main.storyboard
+++ b/ArtNYC/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q87-aM-uWC" id="gNp-d1-gwA">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
@@ -223,6 +223,11 @@
                                     <segue destination="1i3-dk-5Wk" kind="show" identifier="showWebView" id="DM1-lh-wNq"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nt1-j4-XdD" customClass="GMSPanoramaView">
+                                <rect key="frame" x="31" y="123" width="312" height="159"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -235,6 +240,7 @@
                         <outlet property="hoursLabel" destination="VpP-YT-tPq" id="BBb-bk-hp2"/>
                         <outlet property="mondayLabel" destination="zmv-cP-qsb" id="YTh-Qj-6mP"/>
                         <outlet property="nameLabel" destination="0Nf-Lz-jol" id="yFC-LJ-uBg"/>
+                        <outlet property="panoView" destination="nt1-j4-XdD" id="lCb-AF-OpQ"/>
                         <outlet property="saturdayLabel" destination="75g-Ed-Vls" id="4dK-6z-aPe"/>
                         <outlet property="sundayLabel" destination="M5u-d9-k1K" id="HqH-NU-JRa"/>
                         <outlet property="thursdayLabel" destination="oiE-3E-MQL" id="bJM-A5-R3F"/>
@@ -309,7 +315,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Srg-Kq-ZhE" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ec9-eB-7yY">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Ec9-eB-7yY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
