--- a/ArtNYC/Base.lproj/Main.storyboard
+++ b/ArtNYC/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q87-aM-uWC" id="gNp-d1-gwA">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
@@ -214,8 +214,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Website"/>
                                 <connections>
-                                    <action selector="urlPressed:" destination="tcj-rq-MrT" eventType="touchUpInside" id="qvi-m6-nks"/>
-                                    <action selector="websitePressed:" destination="tcj-rq-MrT" eventType="touchUpInside" id="IUI-Rb-aAp"/>
                                     <segue destination="1i3-dk-5Wk" kind="show" identifier="showWebView" id="VC3-Ej-X85"/>
                                 </connections>
                             </button>
@@ -247,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iKZ-0z-LoW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4133.6000000000004" y="789.35532233883066"/>
+            <point key="canvasLocation" x="4134" y="770"/>
         </scene>
         <!--WebVC-->
         <scene sceneID="erp-AN-ynw">
@@ -272,25 +270,25 @@
                                 <items>
                                     <barButtonItem title="&lt;" id="5ar-r5-giB">
                                         <connections>
-                                            <action selector="doRefresh:" destination="1i3-dk-5Wk" id="Esl-l1-8gZ"/>
+                                            <action selector="goBack:" destination="1i3-dk-5Wk" id="cQh-1e-Hb1"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="lu5-Ty-bXk"/>
                                     <barButtonItem tag="15" systemItem="refresh" id="Hcr-IN-Xqq">
                                         <connections>
-                                            <action selector="goBack:" destination="1i3-dk-5Wk" id="zge-dw-qaH"/>
+                                            <action selector="doRefresh:" destination="1i3-dk-5Wk" id="es6-yv-7Tz"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="G50-Mg-vZS"/>
                                     <barButtonItem systemItem="stop" id="owX-Pc-Irm">
                                         <connections>
-                                            <action selector="goForward:" destination="1i3-dk-5Wk" id="Ewz-Te-lDt"/>
+                                            <action selector="stop:" destination="1i3-dk-5Wk" id="shr-PP-9E4"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="HNa-hX-MyX"/>
                                     <barButtonItem title="&gt;" id="eYd-7P-lEa">
                                         <connections>
-                                            <action selector="stop:" destination="1i3-dk-5Wk" id="duD-Pw-6dI"/>
+                                            <action selector="goForward:" destination="1i3-dk-5Wk" id="mjJ-ao-gpO"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -304,7 +302,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vvf-tk-8Zs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4898.3999999999996" y="792.95352323838085"/>
+            <point key="canvasLocation" x="4898" y="770"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="PtL-BM-47f">
