added scroll view

--- a/ArtNYC/Base.lproj/Main.storyboard
+++ b/ArtNYC/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ART • NYC-->
+        <!--Museum ListVC-->
         <scene sceneID="ZDY-Fb-SKt">
             <objects>
                 <viewController id="zIr-vy-VVy" customClass="MuseumListVC" customModule="ArtNYC" customModuleProvider="target" sceneMemberID="viewController">
@@ -64,7 +64,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="ART • NYC" id="Ixs-iR-c1m"/>
+                    <navigationItem key="navigationItem" id="Ixs-iR-c1m"/>
                     <connections>
                         <outlet property="museumTableView" destination="27E-yJ-IAi" id="0DN-C6-Ahx"/>
                     </connections>
@@ -116,22 +116,8 @@
                     <view key="view" contentMode="scaleToFill" id="YrL-XY-w2t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rce-cf-LQ7">
-                                <rect key="frame" x="16" y="637" width="67" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Website"/>
-                                <connections>
-                                    <segue destination="1i3-dk-5Wk" kind="show" identifier="showWebView" id="VC3-Ej-X85"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <outlet property="urlLabel" destination="Rce-cf-LQ7" id="ISj-JQ-rfz"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iKZ-0z-LoW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
