--- a/ArtNYC/Base.lproj/LaunchScreen.storyboard
+++ b/ArtNYC/Base.lproj/LaunchScreen.storyboard
@@ -14,7 +14,7 @@
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
 </document>
