--- a/ArtNYC/Base.lproj/LaunchScreen.storyboard
+++ b/ArtNYC/Base.lproj/LaunchScreen.storyboard
@@ -6,12 +6,52 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController"/>
+                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="STz-Ir-jK8"/>
+                        <viewControllerLayoutGuide type="bottom" id="cVz-O1-dSt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Jk-P0-nWw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ART" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9o-gu-pmb">
+                                <rect key="frame" x="141" y="216" width="93" height="68.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="50"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="museums" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDx-VM-rbY">
+                                <rect key="frame" x="137" y="269.5" width="101.5" height="33"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="24"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NYC" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GwM-Kg-EIs">
+                                <rect key="frame" x="136.5" y="292.5" width="103" height="68.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="50"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.25490196078431371" green="0.51372549019607838" blue="0.84313725490196079" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="GwM-Kg-EIs" firstAttribute="centerX" secondItem="DDx-VM-rbY" secondAttribute="centerX" id="2Wt-4s-PJP"/>
+                            <constraint firstItem="a9o-gu-pmb" firstAttribute="centerY" secondItem="6Jk-P0-nWw" secondAttribute="centerY" multiplier="0.75" id="8a7-IP-ZWD"/>
+                            <constraint firstItem="a9o-gu-pmb" firstAttribute="centerX" secondItem="6Jk-P0-nWw" secondAttribute="centerX" id="97X-KR-UJr"/>
+                            <constraint firstItem="DDx-VM-rbY" firstAttribute="centerX" secondItem="a9o-gu-pmb" secondAttribute="centerX" id="EHL-Cs-BTX"/>
+                            <constraint firstItem="DDx-VM-rbY" firstAttribute="top" secondItem="a9o-gu-pmb" secondAttribute="bottom" constant="-15" id="Eth-gb-2Ki"/>
+                            <constraint firstItem="GwM-Kg-EIs" firstAttribute="top" secondItem="DDx-VM-rbY" secondAttribute="bottom" constant="-10" id="KUR-Xp-BlM"/>
+                        </constraints>
+                    </view>
+                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
